<resources>
    <string name="app_name">AyakkabiSatisUyg</string>
    <string name="kodNo">KOD NUMARASINI GİRİNİZ</string>
    <string name="sorguButton">SORGULA</string>
    <string name="guncelle">STOK EKLE</string>
    <string name="beden">BEDEN</string>
    <string name="no40">40</string>
    <string name="no41">41</string>
    <string name="no42">42</string>
    <string name="no43">43</string>
    <string name="no44">44</string>
    <string name="saticiCirolari">SATICI CİROLARI</string>
    <string name="ciro">SATICI CİROLARI</string>
    <string name="fiyatEtiketi">Fiyat Etiketi</string>
    <string name="saticiKodu">SATICI KODUNU GİRİNİZ</string>
    <string name="geri">Geri</string>
    <string name="merkez_depo">Merkez Depo</string>
    <string name="yeni">AYAKKABI EKLE</string>
    <string name="primEkle">EKLE</string>
    <string name="ekle">EKLE</string>
    <string name="fiyatText">Fiyat Etiketi</string>
    <string name="todo2">TODO</string>
    <string name="kodGir">Ayakkabı Kodu</string>
    <string name="noGir">Numara</string>
    <string name="adetGir">Adet</string>
    <string name="stokEkle">Stok Ekle</string>
    <string name="MstokEkle">Merkez Stok Ekle</string>
    <string name="todo1">TODO</string>
    <string name="kod">Ayakkabı Kodu</string>
    <string name="ad">Ayakkabı Adı</string>
    <string name="fiyatgir">Fiyat</string>
    <string name="no">Numara</string>
    <string name="adetgir">Mağaza Stok</string>
    <string name="satici">Satıcı Kodu</string>
    <string name="saticiekle">EKLE</string>
    <string name="saticiEkle">SATICI EKLE</string>
    <string name="madetgir">Merkez Magaza Stok</string>
</resources>