<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity6">

    <Button
        android:id="@+id/MstokEkle"
        android:layout_width="142dp"
        android:layout_height="65dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/orange"
        android:text="@string/MstokEkle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/adetGir"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/stokEkle"
        app:layout_constraintTop_toBottomOf="@+id/adetGir"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/kodGir"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@drawable/text_arka_plan"
        android:ems="10"
        android:hint="@string/kodGir"
        android:maxLength="6"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <Button
        android:id="@+id/geri4"
        android:layout_width="83dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/white"
        android:text="@string/geri"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/stokEkle"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stokEkle"
        app:layout_constraintVertical_bias="0.976"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:background="@drawable/text_arka_plan"
        android:id="@+id/noGir"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:maxLength="2"
        android:hint="@string/noGir"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/kodGir"
        app:layout_constraintStart_toStartOf="@+id/kodGir"
        app:layout_constraintTop_toBottomOf="@+id/kodGir"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" />

    <EditText
        android:background="@drawable/text_arka_plan"
        android:id="@+id/adetGir"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/adetGir"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/noGir"
        app:layout_constraintStart_toStartOf="@+id/noGir"
        app:layout_constraintTop_toBottomOf="@+id/noGir"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" />

    <Button
        android:id="@+id/stokEkle"
        android:layout_width="142dp"
        android:layout_height="65dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/orange"
        android:text="@string/stokEkle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/adetGir"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/adetGir"
        app:layout_constraintTop_toBottomOf="@+id/adetGir"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>