<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/ciro"
        android:layout_width="129dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/orange"
        android:hint="@string/ciro"
        android:paddingTop="5dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/kodNo"
        app:layout_constraintEnd_toStartOf="@+id/saticiEkle"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="@+id/kodNo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/saticiEkle"
        android:layout_width="129dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/orange"
        android:hint="@string/saticiEkle"
        android:paddingTop="5dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/kodNo"
        app:layout_constraintEnd_toEndOf="@+id/kodNo"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="@+id/kodNo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/sorguButton"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginBottom="220dp"
        android:backgroundTint="@color/orange"
        android:paddingTop="5dp"
        android:text="@string/sorguButton"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/kodNo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/kodNo"
        app:layout_constraintTop_toBottomOf="@+id/kodNo"
        app:layout_constraintVertical_bias="0.654"
        tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints" />

    <Button
        android:id="@+id/guncelle"
        android:layout_width="129dp"
        android:layout_height="65dp"
        android:layout_marginTop="144dp"
        android:backgroundTint="@color/orange"
        android:paddingTop="5dp"
        android:text="@string/guncelle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sorguButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/sorguButton"
        app:layout_constraintTop_toBottomOf="@+id/sorguButton"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/kodNo"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="176dp"
        android:autofillHints=""
        android:background="@drawable/text_arka_plan"
        android:ems="10"
        android:hint="@string/kodNo"
        android:inputType="number"
        android:maxLength="6"
        android:paddingTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/yeni"
        android:layout_width="129dp"
        android:layout_height="65dp"
        android:layout_marginTop="144dp"
        android:backgroundTint="@color/orange"
        android:paddingTop="5dp"
        android:text="@string/yeni"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sorguButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sorguButton"
        app:layout_constraintTop_toBottomOf="@+id/sorguButton"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>