<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <EditText
        android:id="@+id/madetgir"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/text_arka_plan"
        android:ems="10"
        android:hint="@string/madetgir"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/adetgir"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/adetgir"
        app:layout_constraintTop_toBottomOf="@+id/adetgir"
        app:layout_constraintVertical_bias="0.164" />

    <Button
        android:id="@+id/geri2"
        android:layout_width="78dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/geri"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ekle"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/madetgir"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/fiyatgir"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="344dp"
        android:autofillHints=""
        android:background="@drawable/text_arka_plan"
        android:ems="10"
        android:hint="@string/fiyatgir"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ad"
        app:layout_constraintStart_toStartOf="@+id/ad"
        app:layout_constraintTop_toBottomOf="@+id/ad"
        app:layout_constraintVertical_bias="0.937" />

    <EditText
        android:id="@+id/ad"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/text_arka_plan"
        android:ems="10"
        android:hint="@string/ad"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/kod"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/kod"
        app:layout_constraintTop_toBottomOf="@+id/kod"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/kod"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/text_arka_plan"
        android:ems="10"
        android:hint="@string/kod"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="6"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/no"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/text_arka_plan"
        android:ems="10"
        android:hint="@string/no"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fiyatgir"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fiyatgir"
        app:layout_constraintTop_toBottomOf="@+id/fiyatgir"
        app:layout_constraintVertical_bias="0.113" />

    <EditText
        android:id="@+id/adetgir"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/text_arka_plan"
        android:ems="10"
        android:hint="@string/adetgir"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/no"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/no"
        app:layout_constraintTop_toBottomOf="@+id/no"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/ekle"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/orange"
        android:text="@string/yeniAyakkabi"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/madetgir"
        app:layout_constraintStart_toStartOf="@+id/madetgir"
        app:layout_constraintTop_toBottomOf="@+id/madetgir"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>