<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity7">

    <EditText
        android:id="@+id/satici"
        android:layout_width="233dp"
        android:layout_height="67dp"
        android:autofillHints=""
        android:background="@drawable/text_arka_plan"
        android:ems="10"
        android:hint="@string/satici"
        android:inputType="number"
        android:maxLength="5"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/geri6"
        android:layout_width="83dp"
        android:layout_height="43dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/white"
        android:text="@string/geri"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saticiekle"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/saticiekle"
        android:layout_width="120dp"
        android:layout_height="57dp"
        android:layout_marginTop="128dp"
        android:backgroundTint="@color/orange"
        android:hint="@string/saticiekle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/satici"
        app:layout_constraintStart_toStartOf="@+id/satici"
        app:layout_constraintTop_toBottomOf="@+id/satici"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>