<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <ImageView
        android:id="@+id/merkezImage"
        android:layout_width="184dp"
        android:layout_height="96dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116"
        app:srcCompat="@drawable/icon" />

    <Button
        android:id="@+id/geri3"
        android:layout_width="81dp"
        android:layout_height="47dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/geri"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiyatButton"
        app:layout_constraintVertical_bias="0.714"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/isim"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/text_arka_plan"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/merkezImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/no"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/text_arka_plan"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/merkezImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/merkezImage"
        app:layout_constraintTop_toBottomOf="@+id/merkezImage"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/stok"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/text_arka_plan"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/no"
        app:layout_constraintTop_toBottomOf="@+id/merkezImage"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/fiyatText"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/text_arka_plan"
        android:paddingTop="7dp"
        android:text="@string/fiyatText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/no"
        app:layout_constraintTop_toBottomOf="@+id/no"
        app:layout_constraintVertical_bias="0.013" />

    <Button
        android:id="@+id/fiyatButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/orange"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fiyatText"
        app:layout_constraintStart_toStartOf="@+id/fiyatText"
        app:layout_constraintTop_toBottomOf="@+id/fiyatText"
        app:layout_constraintVertical_bias="0.022"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>